@@ -26,6 +26,7 @@
                     <target>17</target>
                     <compilerArgs>
                         <compilerArg>-parameters</compilerArg>
+                        <compilerArg>--enable-preview</compilerArg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -70,9 +71,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.dv8tion</groupId>
+            <groupId>com.github.xirado</groupId>
             <artifactId>JDA</artifactId>
-            <version>5.0.0-alpha.5</version>
+            <version>36eea2a1c5</version>
             <exclusions>
                 <exclusion>
                     <groupId>club.minnced</groupId>
@@ -85,23 +86,23 @@
             <groupId>com.freya02</groupId>
             <artifactId>BotCommands</artifactId>
 <!--            <version>53df90c</version>-->
-            <version>2.3.0-SNAPSHOT</version>
+            <version>2.4.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>22.0.0</version>
+            <version>23.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.10</version>
+            <version>1.2.11</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.3.2</version>
+            <version>42.3.3</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
@@ -122,7 +123,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>31.0.1-jre</version>
+            <version>31.1-jre</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
